src/style.css
/* ... */
.user-lists .list-title-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 16px;
}

#create-list-button {
  padding: 4px;
  transition: 100ms;
}

#create-list-button:hover {
  background-color: var(--Black-10);
  transition: 100ms;
}

#create-list-button .create-list-icon {
  display: block;
  width: 24px;
  height: 24px;
  fill: var(--Black-50);
}

.lists-group {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.list-sidebar-element {
  color: var(--Black);
  font-weight: 500;
  border-radius: 8px;
  padding: 8px;
  cursor: pointer;
  display: flex;
  gap: 4px;
  transition: 200ms;
}

.list-sidebar-element .list-sidebar-element-icon {
  display: block;
  min-width: 24px;
  max-height: 24px;
}

.list-sidebar-element .list-sidebar-element-label {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.list-sidebar-element.selected {
  font-weight: 700;
  transition: 200ms;
}

.list-sidebar-element:hover,
.list-sidebar-element.selected {
  background-color: var(--Black-10);
  transition: 200ms;
}

.lower-sidebar {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: end;
  width: 100%;
}

#credits {
  color: var(--Black-50);
  font-size: 0.875rem;
}

#credits a {
  text-decoration: none;
  font-weight: 500;
}

#credits a,
#credits a:visited {
  color: var(--Primary);
}

/* List content */

#list-page {
  display: flex;
  flex-direction: column;
  width: calc(100% - 256px);
  margin-left: auto;
}

#list-background {
  height: 152px;
  background: var(--List-Background-Gradient);
}

.list-container {
  margin: 48px auto;
  width: clamp(400px, 50vw, 832px);
}

.title-section {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 100%;
  gap: 26px;
  margin-bottom: 48px;
  word-wrap: break-word;
}

.title-section #list-title {
  flex: 1;
  max-width: 80%;
}

.title-section .options-controller-button {
  padding: 8px;
  background-color: var(--White);
  transition: background-color 200ms;
}

.title-section .options-controller-button:hover,
.title-section .options-controller-button:focus {
  background-color: var(--Black-10);
  transition: background-color 200ms;
}

.title-section .list-more-options .button-icon {
  fill: var(--Black);
  width: 35px;
  height: 35px;
}

#new-task-button {
  width: 100%;
  padding: 24px 32px;
  font-weight: 400;
  color: var(--Black-50);
  border: 1px solid var(--Black-25);
  border-radius: 8px;
  background-color: var(--White);
  transition: background-color 200ms;
}

#new-task-button:hover {
  background-color: hsl(0, 0%, 94%);
  transition: background-color 200ms;
}

.empty-page {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 48px auto;
  width: clamp(400px, 50vw, 800px);
  text-align: center;
  gap: 24px;
}

.empty-page .empty-title {
  color: var(--Primary);
  font-weight: 700;
  font-size: 2.5rem;
}

.empty-page .empty-subtitle {
  font-size: 1.2rem;
  color: var(--Black-50);
}

.hide {
  display: none;
}

/* Tasks */

#tasks-container,
#completed-tasks-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin-bottom: 8px;
}

.task {
  background-color: var(--Black-05);
  padding: 24px 32px;
  border: 1px solid var(--Black-25);
  border-radius: 8px;
  display: flex;
  align-items: center;
  gap: 32px;
  cursor: pointer;
  transition: background-color 200ms;
}

.task:hover {
  background-color: hsl(195, 10%, 87%);
  transition: background-color 200ms;
}

.task .complete-task-button {
  display: block;
  min-width: 32px;
  height: 32px;
  cursor: pointer;
}

.task .task-information {
  display: flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;
  gap: 24px;
}

.task .main-information {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.task .title {
  color: var(--Black);
  font-weight: 500;
  font-size: 1.375rem;
}

.task .description {
  color: var(--Black-50);
}

.task .title,
.task .description {
  max-width: 425px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.task .sub-information {
  display: flex;
  gap: 24px;
  font-weight: 400;
}

.task .priority.low {
  color: var(--Low-Priority);
  fill: var(--Low-Priority);
}

.task .priority.medium {
  color: var(--Medium-Priority);
  fill: var(--Medium-Priority);
}

.task .priority.high {
  color: var(--High-Priority);
  fill: var(--High-Priority);
}

.task .priority,
.task .date {
  display: flex;
  gap: 4px;
  align-items: center;
}

.task .date {
  color: var(--Black-75);
  fill: var(--Black-75);
}

.task .date-icon,
.task .priority-icon {
  display: block;
  min-width: 24px;
  max-height: 24px;
}

/* Completed tasks */
.completed-tasks-section {
  border-top: 1px solid var(--Black-25);
  margin-top: 32px;
  padding-top: 32px;
}

.completed-tasks-title-section {
  display: flex;
  gap: 24px;
  align-items: center;
  margin-bottom: 24px;
}

#completed-tasks-container {
  display: none;
}

#completed-tasks-container .task .title {
  text-decoration: line-through;
  color: var(--Black-75);
}

.expand-tasks {
  width: 24px;
  height: 24px;
  cursor: pointer;
  /* Set 360 degrees to rotate to right instead to the left */
  transform: rotate(360deg);
  transition: 300ms;
}

.completed-tasks-section.show .expand-tasks {
  transform: rotate(180deg);
  transition: 300ms;
}

.completed-tasks-section.show #completed-tasks-container {
  display: flex;
}

/* Dialogs */

dialog {
  display: flex;
  flex-direction: column;
  padding: 16px;
  background-color: var(--White);
  border: none;
  border-radius: 16px;
  animation-name: showDialog;
  animation-duration: 300ms;
}

dialog.closing {
  animation-name: closeDialog;
  animation-duration: 300ms;
  animation-fill-mode: forwards;
}

dialog::backdrop {
  background-color: #00000099;
  animation-name: showDialogBackdrop;
  animation-duration: 300ms;
}
/* ... */

